# VVFS

./: README.md  meson.build  meson_options.txt
lib/: File.vala  FileType.vala  Utility.vala  meson.build  vvfs.deps
reconfigure/: build.ninja  compile_commands.json
reconfigure/lib/: libvvfs.dylib
reconfigure/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-dependencies.json  intro-installed.json  intro-projectinfo.json  intro-targets.json  meson-info.json
reconfigure/meson-logs/: meson-log.txt
reconfigure/meson-private/: cmd_line.txt  vvfs.pc
reconfigure/meson-uninstalled/: vvfs-uninstalled.pc
src/: Application.vala  Main.vala  meson.build
tests/: exists.vala  meson.build
